--- a/linkDev-assessment/src/app/core/layout/header/header.component.scss
+++ b/linkDev-assessment/src/app/core/layout/header/header.component.scss
@@ -63,8 +63,7 @@
   }
   .hero-section {
     background-color: $main-color-dark;
-    // background: url("https://placehold.co/1920x400") no-repeat center
-    //   center/cover;
+    background: url("../../../../assets/img/hero-img.jpg") no-repeat center center/cover;
     color: $white;
     text-align: center;
     padding: 4rem 2rem;
