--- a/linkDev-assessment/src/app/features/my-requests/my-requests.component.html
+++ b/linkDev-assessment/src/app/features/my-requests/my-requests.component.html
@@ -5,47 +5,51 @@
     </div>
     <div class="col-md-9">
       <div class="card">
-
         <div class="alert alert-light alert-custom">
           <form [formGroup]="filterForm" (ngSubmit)="onFilter()">
             <div class="row">
               <div class="col-sm-4 mb-3">
-
-                <label>
-                  Request Number
-                </label>
-                <input formControlName="requestNumber" type="text" class="form-control" />
+                <label> Request Number </label>
+                <input
+                  formControlName="requestNumber"
+                  type="text"
+                  class="form-control"
+                />
               </div>
               <div class="col-sm-4 mb-3">
-
-                <label>
-                  Request Status
-                </label>
+                <label> Request Status </label>
                 <select formControlName="requestStatus" class="form-control">
-                  <option *ngFor="let status of statuses" [value]="status.statusName">
+                  <option
+                    *ngFor="let status of statuses"
+                    [value]="status.statusName"
+                  >
                     {{ status.statusName }}
                   </option>
                 </select>
               </div>
               <div class="col-sm-4 mb-3">
-                <label>
-                  Submission Date From
-                </label>
-                <input formControlName="submissionDateFrom" type="date" class="form-control" />
+                <label> Submission Date From </label>
+                <input
+                  formControlName="submissionDateFrom"
+                  type="date"
+                  class="form-control"
+                />
               </div>
               <div class="col-sm-4 mb-3">
-
-                <label>
-                  Submission Date To
-                </label>
-                <input formControlName="submissionDateTo" type="date" class="form-control" />
+                <label> Submission Date To </label>
+                <input
+                  formControlName="submissionDateTo"
+                  type="date"
+                  class="form-control"
+                />
               </div>
               <div class="col-sm-2 align-self-center">
-
-                <button class="btn btn-primary" type="submit">Filter</button>                
+                <button class="btn btn-primary" type="submit">Filter</button>
               </div>
               <div class="col-sm-2 align-self-center">
-                <button class="btn btn-light" (click)="clearFilter()">Clear Filters</button>
+                <button class="btn btn-light" (click)="clearFilter()">
+                  Clear Filters
+                </button>
               </div>
             </div>
           </form>
@@ -59,17 +63,23 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="
-              let request of filteredRequests
-                | paginate : { itemsPerPage: itemsPerPage, currentPage: p }
-            ">
+            <tr
+              *ngFor="
+                let request of filteredRequests
+                  | paginate : { itemsPerPage: itemsPerPage, currentPage: p }
+              "
+            >
               <td>{{ request.requestNumber }}</td>
               <td>{{ getStatusName(request.requestStatus) }}</td>
               <td>{{ request.requestSubmissionDate | dateOnly }}</td>
             </tr>
           </tbody>
         </table>
-        <pagination-controls nextLabel="" previousLabel="" (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls
+          nextLabel=""
+          previousLabel=""
+          (pageChange)="p = $event"
+        ></pagination-controls>
       </div>
     </div>
   </div>
