--- a/linkDev-assessment/src/app/features/events/components/events-listing/events-listing.component.html
+++ b/linkDev-assessment/src/app/features/events/components/events-listing/events-listing.component.html
@@ -4,7 +4,7 @@
 
       <div class="row">
         <div class="col-md-4">
-          <input type="date" [(ngModel)]="filters.date" (change)="applyFilters()" class="form-control" pattern="\d{4}-\d{2}-\d{2}" placeholder="By Date" />
+          <input type="date" [(ngModel)]="filters.date" (change)="applyFilters()" class="form-control" placeholder="By Date" />
         </div>
         <div class="col-md-4">
           <select [(ngModel)]="filters.category" (change)="applyFilters()" class="form-select">
