--- a/linkDev-assessment/src/styles.scss
+++ b/linkDev-assessment/src/styles.scss
@@ -16,6 +16,9 @@ a {
 .main-color{
   color: $main-color;
 }
+.bg-secondary-light{
+  background-color: #74747433;
+}
 
 .ngx-pagination{
   text-align: center;
