--- a/linkDev-assessment/src/app/features/events/components/event-register/event-register.component.html
+++ b/linkDev-assessment/src/app/features/events/components/event-register/event-register.component.html
@@ -26,13 +26,15 @@
         
         <div class="row">
           <h1 class="main-color h4">Request Tickets</h1>  
-          <div class="alert alert-secondary">
-            maximum allowed number of registration per customer is 5 persons.
+          <div class="col-6">
+            <div class="alert alert-secondary">
+              maximum allowed number of registration per customer is 5 persons.
+            </div>
+            <button class="btn btn-outline-primary mb-3">
+              Add Tickets
+            </button>
           </div>
-
-          <button class="btn btn-outline-primary mb-3">
-            Add Tickets
-          </button>
+          
 
           <table class="table">
             <thead class=" table-primary">
